<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="fill_vertical|center_horizontal"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/txtCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currentTime" />
            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textReservationStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservationStatusWaiting"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservatedDuringTime"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Chronometer
                android:id="@+id/chronometerReservationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chronoText" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duringTime"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonReservationStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/reservationStart" />

        <LinearLayout
            android:id="@+id/itemGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radioChooseCalendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    andro
                    id:text="@string/setDate" />

                <RadioButton
                    android:id="@+id/radioChooseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/setTime" />
            </RadioGroup>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FDF5E6"
            android:textAlignment="center" >

            <Button
                android:id="@+id/buttonReservationCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setReservationCompleted" />

            <TextView
                android:id="@+id/textReservatedDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>